--- a/MapMatching/1. Examples.ipynb
+++ b/MapMatching/1. Examples.ipynb
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-11T07:18:09.438007Z",
-     "start_time": "2019-02-11T07:18:09.433543Z"
+     "end_time": "2019-02-12T08:15:42.536845Z",
+     "start_time": "2019-02-12T08:15:42.530861Z"
     }
    },
    "outputs": [],
@@ -91,6 +91,31 @@
     "        (1.1, 2.3), (1.3, 2.9), (1.2, 3.1), (1.5, 3.2), (1.8, 3.5), (2.0, 3.7),\n",
     "        (2.3, 3.5), (2.4, 3.2), (2.6, 3.1), (2.9, 3.1), (3.0, 3.2),\n",
     "        (3.1, 3.8), (3.0, 4.0), (3.1, 4.3), (3.1, 4.6), (3.0, 4.9)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-12T08:15:48.902385Z",
+     "start_time": "2019-02-12T08:15:48.894368Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(path)"
    ]
   },
   {
@@ -331,6 +356,13 @@
      "library": "var_list.r",
      "varRefreshCmd": "cat(var_dic_list()) "
     }
+   },
+   "position": {
+    "height": "144px",
+    "left": "1239px",
+    "right": "20px",
+    "top": "351px",
+    "width": "350px"
    },
    "types_to_exclude": [
     "module",
